@@ -5,6 +5,7 @@ export(browse_study)
 export(coverage_matrix)
 export(download_study)
 export(expressed_regions)
+export(find_geo)
 export(geo_info)
 export(reproduce_ranges)
 export(scale_counts)
